--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
     <div class="col-sm-5">
       <h2 class="squished"><a href="https://github.com/attogram/ote">Open Translation Engine</a></h2>
       The Open Translation Engine is a collaborative translation dictionary manager for the open content web.
-      <br />PHP / SQLite / Attogram Framework module
+      <br />PHP / SQLite / Attogram Framework module.
     </div>
     <div class="col-sm-2">
         <a href="https://github.com/attogram/ote/blob/master/README.md">README</a>
@@ -99,6 +99,106 @@ a:active { background-color:orange; color:black; text-decoration:none; }
     </div>
   </div>
 
+  <div class="row rowb">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/8queens">8queens</a></h2>
+      Play the 8 Queens chess puzzle.
+      <br />PHP / Javascript / Attogram Framework module.
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/8queens/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/8queens/blob/master/CHANGELOG.md">CHANGELOG</a>
+        <br /><a href="https://github.com/attogram/8queens/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/8queens/blob/master/LICENSE.md">LICENSE</a>
+    </div>
+    <div class="col-sm-2">
+        <a href="https://travis-ci.org/attogram/8queens"><img src="https://travis-ci.org/attogram/8queens.svg?branch=master" alt="Build" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/8queens"><img src="https://poser.pugx.org/attogram/8queens/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/8queens"><img src="https://poser.pugx.org/attogram/8queens/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/8queens"><img src="https://poser.pugx.org/attogram/8queens/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://github.com/attogram/8queens/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/8queens/license" alt="License" /></a>
+    </div>
+    <div class="col-sm-3">
+        <a href="https://www.codacy.com/app/attogram-project/8queens?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/8queens&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/b471a1179412483e8c42eaaefe44c00d"/></a>
+        <br /><a href="https://codeclimate.com/github/attogram/8queens"><img src="https://codeclimate.com/github/attogram/8queens/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/8queens"><img src="https://codeclimate.com/github/attogram/8queens/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+  </div>
+
+  <div class="row rowb">
+      <div class="col-sm-5">
+        <h2 class="squished"><a href="https://github.com/attogram/attogram-base">Attogram Base Module</a></h2>
+        Base module for the Attogram Framework.
+      </div>
+      <div class="col-sm-2">
+          <a href="https://github.com/attogram/attogram-base/blob/master/README.md">README</a>
+          <br /><a href="https://github.com/attogram/attogram-base/blob/master/CHANGELOG.md">CHANGELOG</a>
+          <br /><a href="https://github.com/attogram/attogram-base/blob/master/TODO.md">TODO</a>
+          <br /><a href="https://github.com/attogram/attogram-base/blob/master/LICENSE.md">LICENSE</a>
+      </div>
+      <div class="col-sm-2">
+          <a href="https://travis-ci.org/attogram/attogram-base"><img src="https://travis-ci.org/attogram/attogram-base.svg?branch=master" alt="Build" /></a>
+          <br /><a href="https://packagist.org/packages/attogram/attogram-base"><img src="https://poser.pugx.org/attogram/attogram-base/v/stable" alt="Latest Stable Version" /></a>
+          <br /><a href="https://packagist.org/packages/attogram/attogram-base"><img src="https://poser.pugx.org/attogram/attogram-base/downloads" alt="Total Downloads" /></a>
+          <br /><a href="https://packagist.org/packages/attogram/attogram-base"><img src="https://poser.pugx.org/attogram/attogram-base/v/unstable" alt="Latest Unstable Version" /></a>
+          <br /><a href="https://github.com/attogram/attogram-base/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-base/license" alt="License" /></a>
+      </div>
+      <div class="col-sm-3">
+          <a href="https://www.codacy.com/app/attogram-project/attogram-base?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-base&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/821b551ca77042799cbd6cdb013a5668"/></a>          <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/gpa.svg" alt="Code Climate" /></a>
+          <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/gpa.svg" alt="Code Climate" /></a>
+          <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/issue_count.svg" alt="Issue Count" /></a>
+      </div>
+  </div>
+
+  <div class="row rowb">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/attogram-database">Attogram Database Module</a></h2>
+      Database module for the Attogram Framework.
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/attogram-database/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/attogram-database/blob/master/CHANGELOG.md">CHANGELOG</a>
+        <br /><a href="https://github.com/attogram/attogram-database/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/attogram-database/blob/master/LICENSE.md">LICENSE</a>
+    </div>
+    <div class="col-sm-2">
+        <a href="https://travis-ci.org/attogram/attogram-database"><img src="https://travis-ci.org/attogram/attogram-database.svg?branch=master" alt="Build" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-database"><img src="https://poser.pugx.org/attogram/attogram-database/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-database"><img src="https://poser.pugx.org/attogram/attogram-database/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-database"><img src="https://poser.pugx.org/attogram/attogram-database/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://github.com/attogram/attogram-database/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-database/license" alt="License" /></a>
+    </div>
+    <div class="col-sm-3">
+        <a href="https://www.codacy.com/app/attogram-project/attogram-database?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-database&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/504e180dee5e460db61335319b5de859"/></a>        <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+  </div>
+
+  <div class="row rowb">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/attogram-user">Attogram User Module</a></h2>
+      User module for the Attogram Framework.
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/attogram-user/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/attogram-user/blob/master/CHANGELOG.md">CHANGELOG</a>
+        <br /><a href="https://github.com/attogram/attogram-user/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/attogram-user/blob/master/LICENSE.md">LICENSE</a>
+    </div>
+    <div class="col-sm-2">
+        <a href="https://travis-ci.org/attogram/attogram-user"><img src="https://travis-ci.org/attogram/attogram-database.svg?branch=master" alt="Build" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-user"><img src="https://poser.pugx.org/attogram/attogram-database/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-user"><img src="https://poser.pugx.org/attogram/attogram-database/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-user"><img src="https://poser.pugx.org/attogram/attogram-database/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://github.com/attogram/attogram-user/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-database/license" alt="License" /></a>
+    </div>
+    <div class="col-sm-3">
+        <a href="https://www.codacy.com/app/attogram-project/attogram-user?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-user&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/8b2c48929d514a60b355a84f136c57c2"/></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+  </div>
 
 <footer class="text-center">
   <p><br /></p>
