--- a/index.html
+++ b/index.html
@@ -144,7 +144,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
           <br /><a href="https://github.com/attogram/attogram-base/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-base/license" alt="License" /></a>
       </div>
       <div class="col-sm-3">
-          <a href="https://www.codacy.com/app/attogram-project/attogram-base?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-base&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/821b551ca77042799cbd6cdb013a5668"/></a>          <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/gpa.svg" alt="Code Climate" /></a>
+          <a href="https://www.codacy.com/app/attogram-project/attogram-base?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-base&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/821b551ca77042799cbd6cdb013a5668"/></a>
           <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/gpa.svg" alt="Code Climate" /></a>
           <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/issue_count.svg" alt="Issue Count" /></a>
       </div>
@@ -169,7 +169,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
         <br /><a href="https://github.com/attogram/attogram-database/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-database/license" alt="License" /></a>
     </div>
     <div class="col-sm-3">
-        <a href="https://www.codacy.com/app/attogram-project/attogram-database?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-database&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/504e180dee5e460db61335319b5de859"/></a>        <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/gpa.svg" alt="Code Climate" /></a>
+        <a href="https://www.codacy.com/app/attogram-project/attogram-database?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-database&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/504e180dee5e460db61335319b5de859"/></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
