--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
         <br /><a href="https://github.com/attogram/8queens/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/8queens/license" alt="License" /></a>
     </div>
     <div class="col-sm-3">
-        <a href="https://www.codacy.com/app/attogram-project/8queens?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/8queens&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/b471a1179412483e8c42eaaefe44c00d"/></a>
+        <a href="https://www.codacy.com/app/attogram-project/8queens?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/8queens&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/b471a1179412483e8c42eaaefe44c00d" alt="Grade" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/8queens"><img src="https://codeclimate.com/github/attogram/8queens/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/8queens"><img src="https://codeclimate.com/github/attogram/8queens/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
@@ -144,7 +144,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
           <br /><a href="https://github.com/attogram/attogram-base/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-base/license" alt="License" /></a>
       </div>
       <div class="col-sm-3">
-          <a href="https://www.codacy.com/app/attogram-project/attogram-base?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-base&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/821b551ca77042799cbd6cdb013a5668"/></a>
+          <a href="https://www.codacy.com/app/attogram-project/attogram-base?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-base&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/821b551ca77042799cbd6cdb013a5668" alt="Grade" /></a>
           <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/gpa.svg" alt="Code Climate" /></a>
           <br /><a href="https://codeclimate.com/github/attogram/attogram-base"><img src="https://codeclimate.com/github/attogram/attogram-base/badges/issue_count.svg" alt="Issue Count" /></a>
       </div>
@@ -169,7 +169,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
         <br /><a href="https://github.com/attogram/attogram-database/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-database/license" alt="License" /></a>
     </div>
     <div class="col-sm-3">
-        <a href="https://www.codacy.com/app/attogram-project/attogram-database?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-database&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/504e180dee5e460db61335319b5de859"/></a>
+        <a href="https://www.codacy.com/app/attogram-project/attogram-database?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-database&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/504e180dee5e460db61335319b5de859" alt="Grade" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-database"><img src="https://codeclimate.com/github/attogram/attogram-database/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
@@ -194,7 +194,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
         <br /><a href="https://github.com/attogram/attogram-user/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-user/license" alt="License" /></a>
     </div>
     <div class="col-sm-3">
-        <a href="https://www.codacy.com/app/attogram-project/attogram-user?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-user&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/8b2c48929d514a60b355a84f136c57c2"/></a>
+        <a href="https://www.codacy.com/app/attogram-project/attogram-user?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-user&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/8b2c48929d514a60b355a84f136c57c2" alt="Grade" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
