--- a/index.html
+++ b/index.html
@@ -37,6 +37,8 @@ a:active { background-color:orange; color:black; text-decoration:none; }
       <a href="#ote" class="headb">Open Translation Engine</a>
       <br /><a href="#dams" class="headb">Dictionary Additions Management System</a>
       <br /><a href="#8queens" class="headb">8 Queens puzzle</a>
+      <br /><a href="#wiib" class="headb">WiiB</a>
+      <br /><a href="#yamwat" class="headb">Yamwat</a>
       <br /><a href="#attogram.github.io" class="headb">attogram.github.io</a>
     </div>
   </div>
@@ -223,6 +225,47 @@ a:active { background-color:orange; color:black; text-decoration:none; }
         <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
   </div>
+
+  <a name="wiib"></a>
+  <div class="row rowb highlight">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/wiib">WiiB</a></h2>
+       WiiB - Which image is better?
+       Shared lightbox with free license photos and images from Wikimedia Commons.
+       PHP / SQLite
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/wiib/blob/master/README.md">README</a>
+    </div>
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-3">
+        <a href="https://www.codacy.com/app/attogram-project/wiib?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/wiib&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/f599d19f0d154ca7b373438a8cf37b75" alt="Score" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/wiib"><img src="https://codeclimate.com/github/attogram/wiib/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/wiib"><img src="https://codeclimate.com/github/attogram/wiib/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+  </div>
+
+  <a name="yamwat"></a>
+  <div class="row rowb highlight">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/yamwat">Yamwat</a></h2>
+       Yamwat - Yet Another MediaWiki API Tool.
+       PHP / SQLite
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/yamwat/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/yamwat/blob/master/TODO.md">TODO</a>
+    </div>
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-3">
+<a href="https://www.codacy.com/app/attogram-project/yamwat?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/yamwat&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/46ecaa5d7a374a48b781d9774c7241cc" alt="Score" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/yamwat"><img src="https://codeclimate.com/github/attogram/yamwat/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/yamwat"><img src="https://codeclimate.com/github/attogram/yamwat/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+  </div>
+
 
   <a name="attogram.github.io"></a>
   <div class="row rowb highlight">
