--- a/index.html
+++ b/index.html
@@ -236,6 +236,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
     </div>
     <div class="col-sm-2">
         <a href="https://github.com/attogram/wiib/blob/master/README.md">README</a>
+        <a href="https://github.com/attogram/wiib/blob/master/TODO.md">TODO</a>
     </div>
     <div class="col-sm-2">
     </div>
@@ -255,12 +256,11 @@ a:active { background-color:orange; color:black; text-decoration:none; }
     </div>
     <div class="col-sm-2">
         <a href="https://github.com/attogram/yamwat/blob/master/README.md">README</a>
-        <br /><a href="https://github.com/attogram/yamwat/blob/master/TODO.md">TODO</a>
     </div>
     <div class="col-sm-2">
     </div>
     <div class="col-sm-3">
-<a href="https://www.codacy.com/app/attogram-project/yamwat?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/yamwat&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/46ecaa5d7a374a48b781d9774c7241cc" alt="Score" /></a>
+        <a href="https://www.codacy.com/app/attogram-project/yamwat?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/yamwat&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/46ecaa5d7a374a48b781d9774c7241cc" alt="Score" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/yamwat"><img src="https://codeclimate.com/github/attogram/yamwat/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/yamwat"><img src="https://codeclimate.com/github/attogram/yamwat/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
