--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
     </div>
     <div class="col-sm-2">
         <a href="https://github.com/attogram/wiib/blob/master/README.md">README</a>
-        <a href="https://github.com/attogram/wiib/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/wiib/blob/master/TODO.md">TODO</a>
     </div>
     <div class="col-sm-2">
     </div>
