css to own file, +domdoodler

--- a/index.html
+++ b/index.html
@@ -3,17 +3,7 @@
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/css/bootstrap.min.css" integrity="sha384-1q8mTJOASx8j1Au+a5WDVnPi2lkFfwwEAa8hDDdjZlpLegxhjVME1fgjWPGmkzs7" crossorigin="anonymous">
-<style>
-a:hover { background-color:yellow; color:black; text-decoration:none; }
-a:active { background-color:orange; color:black; text-decoration:none; }
-.highlight:hover { background-color:lightyellow; text-decoration:none; }
-.headb { color:white; }
-.headb:hover { background-color:yellow; color:black; text-decoration:none; }
-.headb:active { background-color:orange; color:black; text-decoration:none; }
-.squished { margin:0; padding:0; }
-.rowb { border:1px solid #ddd; padding:24px; margin:0; }
-.rowh { border:1px solid blue; padding:34px; margin:0; }
-</style>
+<link rel="stylesheet" href="css.css">
 <!--[if lt IE 9]>
 <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
 <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -39,6 +29,7 @@ a:active { background-color:orange; color:black; text-decoration:none; }
       <br /><a href="#8queens" class="headb">8 Queens puzzle</a>
       <br /><a href="#wiib" class="headb">WiiB</a>
       <br /><a href="#yamwat" class="headb">Yamwat</a>
+      <br /><a href="#domdoodler" class="headb">domdoodler</a>
       <br /><a href="#attogram.github.io" class="headb">attogram.github.io</a>
     </div>
   </div>
@@ -266,6 +257,21 @@ a:active { background-color:orange; color:black; text-decoration:none; }
     </div>
   </div>
 
+  <a name="domdoodler"></a>
+  <div class="row rowb highlight">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/domdoodler">domdoodler</a></h2>
+        The DOM Doodler.
+        HTML / Javascript
+    </div>
+    <div class="col-sm-2">
+      <a href="https://github.com/attogram/domdoodler/blob/master/README.md">README</a>
+    </div>
+    <div class="col-sm-2">
+    </div>
+    <div class="col-sm-3">
+    </div>
+  </div>
 
   <a name="attogram.github.io"></a>
   <div class="row rowb highlight">
