--- a/index.html
+++ b/index.html
@@ -268,6 +268,7 @@
       <a href="https://github.com/attogram/domdoodler/blob/master/README.md">README</a>
     </div>
     <div class="col-sm-2">
+      <a href="https://travis-ci.org/attogram/domdoodler"><img src="https://travis-ci.org/attogram/domdoodler.svg?branch=master" alt="Build" /></a>
     </div>
     <div class="col-sm-3">
     </div>
