install urls / new/old

--- a/index.html
+++ b/index.html
@@ -224,6 +224,7 @@
        WiiB - Which image is better?
        Shared lightbox with free license photos and images from Wikimedia Commons.
        PHP / SQLite
+       <br /><a href="http://getitdaily.com/image/">http://getitdaily.com/image/</a>
     </div>
     <div class="col-sm-2">
         <a href="https://github.com/attogram/wiib/blob/master/README.md">README</a>
@@ -244,6 +245,7 @@
       <h2 class="squished"><a href="https://github.com/attogram/yamwat">Yamwat</a></h2>
        Yamwat - Yet Another MediaWiki API Tool.
        PHP / SQLite
+       <br /><a href="http://getitdaily.com/wikis/">http://getitdaily.com/wikis/</a>
     </div>
     <div class="col-sm-2">
         <a href="https://github.com/attogram/yamwat/blob/master/README.md">README</a>
@@ -263,9 +265,12 @@
       <h2 class="squished"><a href="https://github.com/attogram/domdoodler">domdoodler</a></h2>
         The DOM Doodler.
         HTML / Javascript
-    </div>
+        <br /><a href="https://attogram.github.io/domdoodler/">https://attogram.github.io/domdoodler/</a>
+        <br /><a href="http://getitdaily.com/domdoodler/">http://getitdaily.com/domdoodler/</a>
+</div>
     <div class="col-sm-2">
-      <a href="https://github.com/attogram/domdoodler/blob/master/README.md">README</a>
+
+      <br /><a href="https://github.com/attogram/domdoodler/blob/master/README.md">README</a>
     </div>
     <div class="col-sm-2">
       <a href="https://travis-ci.org/attogram/domdoodler"><img src="https://travis-ci.org/attogram/domdoodler.svg?branch=master" alt="Build" /></a>
@@ -279,6 +284,7 @@
     <div class="col-sm-5">
       <h2 class="squished"><a href="https://github.com/attogram/attogram.github.io">attogram.github.io</a></h2>
       This website!
+      <br /><a href="https://attogram.github.io">https://attogram.github.io</a>
     </div>
     <div class="col-sm-2">
     </div>
