--- a/index.html
+++ b/index.html
@@ -290,6 +290,7 @@
     </div>
     <div class="col-sm-2">
         <a href="https://travis-ci.org/attogram/attogram.github.io"><img src="https://travis-ci.org/attogram/attogram.github.io.svg?branch=master" alt="Build" /></a>
+        <a href="https://codeclimate.com/github/attogram/attogram.github.io"><img src="https://codeclimate.com/github/attogram/attogram.github.io/badges/gpa.svg" alt="Badge" /></a>
     </div>
     <div class="col-sm-3">
     </div>
