--- a/index.html
+++ b/index.html
@@ -290,9 +290,10 @@
     </div>
     <div class="col-sm-2">
         <a href="https://travis-ci.org/attogram/attogram.github.io"><img src="https://travis-ci.org/attogram/attogram.github.io.svg?branch=master" alt="Build" /></a>
-        <a href="https://codeclimate.com/github/attogram/attogram.github.io"><img src="https://codeclimate.com/github/attogram/attogram.github.io/badges/gpa.svg" alt="Badge" /></a>
     </div>
     <div class="col-sm-3">
+        <a href="https://www.codacy.com/app/attogram-project/attogram-github-io?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram.github.io&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/8c1baebcf5df4cb79c1fc402322c0675" alt="Badge" /></a>
+        <a href="https://codeclimate.com/github/attogram/attogram.github.io"><img src="https://codeclimate.com/github/attogram/attogram.github.io/badges/gpa.svg" alt="Badge" /></a>
     </div>
   </div>
 
