--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
         <a href="https://www.codacy.com/app/attogram-project/attogram?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/0a50344b228f46c98ffb06b78b99cbe0" alt="Score" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram"><img src="https://codeclimate.com/github/attogram/attogram/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram"><img src="https://codeclimate.com/github/attogram/attogram/badges/issue_count.svg" alt="Issue Count" /></a>
+        <br /><a href='https://www.versioneye.com/user/projects/5786289c6edb08003d1086f4'><img src='https://www.versioneye.com/user/projects/5786289c6edb08003d1086f4/badge.svg?style=flat-square' alt="Dependency Status" /></a>
     </div>
   </div>
 
