--- a/index.html
+++ b/index.html
@@ -277,8 +277,8 @@
       <a href="https://travis-ci.org/attogram/domdoodler"><span class="buildb img-rounded">HTML5</span><img src="https://travis-ci.org/attogram/domdoodler.svg?branch=master" alt="Build" /></a>
     </div>
     <div class="col-sm-3">
-      <a href="https://www.codacy.com/app/attogram-project/domdoodler?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/domdoodler&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/eeecb4a89af54177a1e100c61c184460" alt="Badge" /></a>
-      <br /><a href="https://codeclimate.com/github/attogram/domdoodler"><img src="https://codeclimate.com/github/attogram/domdoodler/badges/gpa.svg" alt="Badge" /></a>
+      <a href="https://www.codacy.com/app/attogram-project/domdoodler?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/domdoodler&amp;utm_campaign=Badge_Grade"><span class="buildb img-rounded">CSS</span><img src="https://api.codacy.com/project/badge/Grade/eeecb4a89af54177a1e100c61c184460" alt="Badge" /></a>
+      <br /><a href="https://codeclimate.com/github/attogram/domdoodler"><span class="buildb img-rounded">CSS</span><img src="https://codeclimate.com/github/attogram/domdoodler/badges/gpa.svg" alt="Badge" /></a>
     </div>
   </div>
 
