--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@
     <div class="col-sm-5">
       <h2 class="squished"><a href="https://github.com/attogram/domdoodler">domdoodler</a></h2>
         The DOM Doodler.
-        HTML / Javascript
+        Javascript / HTML / CSS
         <br /><a href="https://attogram.github.io/domdoodler/">https://attogram.github.io/domdoodler/</a>
         <br /><a href="http://getitdaily.com/domdoodler/">http://getitdaily.com/domdoodler/</a>
     </div>
@@ -276,8 +276,8 @@
       <a href="https://travis-ci.org/attogram/domdoodler"><span class="buildb img-rounded">HTML5</span><img src="https://travis-ci.org/attogram/domdoodler.svg?branch=master" alt="Build" /></a>
     </div>
     <div class="col-sm-3">
-      <a href="https://www.codacy.com/app/attogram-project/domdoodler?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/domdoodler&amp;utm_campaign=Badge_Grade"><span class="buildb img-rounded">CSS+JS</span><img src="https://api.codacy.com/project/badge/Grade/eeecb4a89af54177a1e100c61c184460" alt="Badge" /></a>
-      <br /><a href="https://codeclimate.com/github/attogram/domdoodler"><span class="buildb img-rounded">CSS+JS</span><img src="https://codeclimate.com/github/attogram/domdoodler/badges/gpa.svg" alt="Badge" /></a>
+      <a href="https://www.codacy.com/app/attogram-project/domdoodler?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/domdoodler&amp;utm_campaign=Badge_Grade"><span class="buildb img-rounded">JS, CSS</span><img src="https://api.codacy.com/project/badge/Grade/eeecb4a89af54177a1e100c61c184460" alt="Badge" /></a>
+      <br /><a href="https://codeclimate.com/github/attogram/domdoodler"><span class="buildb img-rounded">JS, CSS</span><img src="https://codeclimate.com/github/attogram/domdoodler/badges/gpa.svg" alt="Badge" /></a>
     </div>
   </div>
 
@@ -286,6 +286,7 @@
     <div class="col-sm-5">
       <h2 class="squished"><a href="https://github.com/attogram/attogram.github.io">attogram.github.io</a></h2>
       This website!
+      HTML / CSS
       <br /><a href="https://attogram.github.io">https://attogram.github.io</a>
     </div>
     <div class="col-sm-2">
