--- a/index.html
+++ b/index.html
@@ -278,6 +278,7 @@
     <div class="col-sm-3">
       <a href="https://www.codacy.com/app/attogram-project/domdoodler?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/domdoodler&amp;utm_campaign=Badge_Grade"><span class="buildb img-rounded">JS, CSS</span><img src="https://api.codacy.com/project/badge/Grade/eeecb4a89af54177a1e100c61c184460" alt="Badge" /></a>
       <br /><a href="https://codeclimate.com/github/attogram/domdoodler"><span class="buildb img-rounded">JS, CSS</span><img src="https://codeclimate.com/github/attogram/domdoodler/badges/gpa.svg" alt="Badge" /></a>
+      <br /><a href="https://codeclimate.com/github/attogram/domdoodler"><img src="https://codeclimate.com/github/attogram/domdoodler/badges/issue_count.svg" alt="Badge" /></a>
     </div>
   </div>
 
@@ -297,6 +298,7 @@
     <div class="col-sm-3">
         <a href="https://www.codacy.com/app/attogram-project/attogram-github-io?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram.github.io&amp;utm_campaign=Badge_Grade"><span class="buildb img-rounded">CSS</span><img src="https://api.codacy.com/project/badge/Grade/8c1baebcf5df4cb79c1fc402322c0675" alt="Badge" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram.github.io"><span class="buildb img-rounded">CSS</span><img src="https://codeclimate.com/github/attogram/attogram.github.io/badges/gpa.svg" alt="Badge" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram.github.io"><img src="https://codeclimate.com/github/attogram/attogram.github.io/badges/issue_count.svg" alt="Badge" /></a>
     </div>
   </div>
 
