--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
       <br /><a href="#attogram-base" class="headb">Attogram Base Module</a>
       <br /><a href="#attogram-database" class="headb">Attogram Database Module</a>
       <br /><a href="#attogram-user" class="headb">Attogram User Module</a>
+      <br /><a href="#attogram-contactform" class="headb">Attogram Contact Form Module</a>
     </div>
     <div class="col-sm-3 small">
       <a href="#ote" class="headb">Open Translation Engine</a>
@@ -215,6 +216,32 @@
         <a href="https://www.codacy.com/app/attogram-project/attogram-user?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-user&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/8b2c48929d514a60b355a84f136c57c2" alt="Grade" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-user"><img src="https://codeclimate.com/github/attogram/attogram-user/badges/issue_count.svg" alt="Issue Count" /></a>
+    </div>
+  </div>
+
+  <a name="attogram-contactform"></a>
+  <div class="row rowb highlight">
+    <div class="col-sm-5">
+      <h2 class="squished"><a href="https://github.com/attogram/attogram-contactform">Attogram Contact Form Module</a></h2>
+      Contact Form module for the Attogram Framework.
+    </div>
+    <div class="col-sm-2">
+        <a href="https://github.com/attogram/attogram-contactform/blob/master/README.md">README</a>
+        <br /><a href="https://github.com/attogram/attogram-contactform/blob/master/CHANGELOG.md">CHANGELOG</a>
+        <br /><a href="https://github.com/attogram/attogram-contactform/blob/master/TODO.md">TODO</a>
+        <br /><a href="https://github.com/attogram/attogram-contactform/blob/master/LICENSE.md">LICENSE</a>
+    </div>
+    <div class="col-sm-2">
+        <a href="https://travis-ci.org/attogram/attogram-contactform"><img src="https://travis-ci.org/attogram/attogram-contactform.svg?branch=master" alt="Build" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-contactform"><img src="https://poser.pugx.org/attogram/attogram-contactform/v/stable" alt="Latest Stable Version" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-contactform"><img src="https://poser.pugx.org/attogram/attogram-contactform/downloads" alt="Total Downloads" /></a>
+        <br /><a href="https://packagist.org/packages/attogram/attogram-contactform"><img src="https://poser.pugx.org/attogram/attogram-contactform/v/unstable" alt="Latest Unstable Version" /></a>
+        <br /><a href="https://github.com/attogram/attogram-contactform/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-contactform/license" alt="License" /></a>
+    </div>
+    <div class="col-sm-3">
+        (codacy)
+        <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/gpa.svg" alt="Code Climate" /></a>
+        <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
   </div>
 
