--- a/index.html
+++ b/index.html
@@ -239,8 +239,7 @@
         <br /><a href="https://github.com/attogram/attogram-contactform/blob/master/LICENSE.md"><img src="https://poser.pugx.org/attogram/attogram-contactform/license" alt="License" /></a>
     </div>
     <div class="col-sm-3">
-        (codacy)
-        <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/gpa.svg" alt="Code Climate" /></a>
+        <a href="https://www.codacy.com/app/attogram-project/attogram-contactform?utm_source=github.com&amp;utm_medium=referral&amp;utm_content=attogram/attogram-contactform&amp;utm_campaign=Badge_Grade"><img src="https://api.codacy.com/project/badge/Grade/ccc7d8a823254176bed3976cfa3bb2a6" alt="Badge" /></a>        <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/gpa.svg" alt="Code Climate" /></a>
         <br /><a href="https://codeclimate.com/github/attogram/attogram-contactform"><img src="https://codeclimate.com/github/attogram/attogram-contactform/badges/issue_count.svg" alt="Issue Count" /></a>
     </div>
   </div>
